2012-11-28  Tobias Burnus  <burnus@net-b.de>

PR fortran/52161
        * trans-stmt.c (gfc_trans_sync): Fix bound checking.


2012-11-28  Tobias Burnus  <burnus@net-b.de>

        PR fortran/52161
        * coarray/sync_3.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@193908 138bc75d-0d04-0410-961f-82ee72b054a4